--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -9,6 +9,8 @@ pipelineConfig:
         - name: pr-checks
           options:
             containerOptions:
+              name: ""
+              resources: {}
               volumeMounts:
               - mountPath: /builder/home/.jx/localSecrets/currentCluster
                 name: local-secrets
@@ -40,10 +42,20 @@ pipelineConfig:
         environment:
         - name: DEPLOY_NAMESPACE
           value: jx
+        - name: GIT_AUTHOR_NAME
+          value: sample-jx
+        - name: GIT_COMMITTER_NAME
+          value: sample-jx
+        - name: GIT_AUTHOR_EMAIL
+          value: j_ronquillo@u.pacific.edu
+        - name: GIT_COMMITTER_EMAIL
+          value: j_ronquillo@u.pacific.edu
         stages:
         - name: release
           options:
             containerOptions:
+              name: ""
+              resources: {}
               volumeMounts:
               - mountPath: /builder/home/.jx/localSecrets/currentCluster
                 name: local-secrets
