--- a/systems/jx-auth/templates/jx-auth-configmap.yaml
+++ b/systems/jx-auth/templates/jx-auth-configmap.yaml
@@ -1,1 +1,23 @@
-# This jx auth configmap will be generated from template
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: jx-auth-config
+  labels:
+    jenkins.io/created-by: jx
+    jenkins.io/config-type: auth
+data:
+  gitAuth.yaml: |
+    currentserver: "https://github.com"
+    defaultusername: "sample-jx"
+    pipelineserver: "https://github.com"
+    pipelineusername: "sample-jx"
+    servers:
+    - currentuser: "sample-jx"
+      kind: "github"
+      name: "github"
+      url: "https://github.com"
+      users:
+      - apitoken: "vault:tf-jx-wired-minnow/pipelineUser:token"
+        bearertoken: ""
+        username: "sample-jx"
